--- a/center-web/src/public/css/main.less
+++ b/center-web/src/public/css/main.less
@@ -1,4 +1,5 @@
 body {
+  height: 100%;
   //background: #F0F3F5 url("http://bing.ioliu.cn/v1/rand?w=1920&h=1200") no-repeat fixed;
   background: #F0F3F5;
   letter-spacing: 2px;
@@ -589,7 +590,7 @@ body {
 }
 .login{
   .bg{
-    background: #F0F3F5 url("http://pgs-static.chevip.com/photo/2017/12/21/5a3b6b74-d795e6636b990ceb.png") no-repeat fixed;
+    background: url("../img/lll.jpg") no-repeat fixed;
     left: 0;
     bottom: 0;
     width: 100%;
